# dynamic_config

./: .gitignore  README.md  roscpp_para_api.sublime-project  roscpp_param_api.files  roscpp_param_api.includes
dynamic_config/: CMakeLists.txt  package.xml
dynamic_config/include/dynamic_config/: dynamic_config.h
dynamic_config/include/gsoc/configuration/: configuration.h  configuration_builder.h  configuration_client.h  configuration_listener.h  configuration_server.h  msg_handler.h  serialization.h
dynamic_config/launch/: demo.launch
dynamic_config/msg/: Conf.msg  Config.msg  Param.msg  Parameter.msg
dynamic_config/src/: config_prototype_node.cpp  dynamic_config_node.cpp
dynamic_config/src/dynamic_config/: reconfigurable_node.cpp
dynamic_config/src/gsoc/configuration/: configuration.cpp  configuration_builder.cpp  configuration_client.cpp  configuration_listener.cpp  configuration_server.cpp  persistance.cpp
dynamic_config/srv/: GetConfig.srv  SetConf.srv  SetConfig.srv
gsoc_param_api/: CMakeLists.txt  package.xml
gsoc_param_api/include/gsoc/: param.h  param_server.h  param_server_proxy.h
gsoc_param_api/src/: parameter_example_node.cpp  parameter_server_node_test.cpp
gsoc_param_api/srv/: AcceptParameter.srv  AddAcceptor.srv  AddUpdater.srv  Del.srv  Get.srv  Has.srv  RemoveAcceptor.srv  RemoveUpdater.srv  Set.srv  UpdateParameter.srv
include/gsoc/configuration/: configuration_builder.h  configuration_client.h  configuration_helper.h  configuration_listener.h  persistance.h  serialization.h
launch/: demo.launch
msg/: Metadata.msg
parameter_example/: CMakeLists.txt  Makefile  package.xml
parameter_example/include/parameter_server/: command.h  commands_queue.h  parameter.h  parameter_server.h  parameters_container.h  parameters_server.h  subscribers_manager.h
parameter_example/include/ros/gsoc/: parameter.h  parameter_manager.h  polymorphic_map.h
parameter_example/include/ros_parameter/: parameter_server_client.h  parameter_server_listener.h  ros_parameter.h
parameter_example/msg/: ParamValue.msg
parameter_example/src/: parameter_example_node.cpp  parameter_server.cpp  ros_parameter_example_node.cpp  ros_parameter_group_example_node.cpp  rosparam_node.cpp
parameter_example/src/consensus/: node_a.cpp
parameter_example/src/parameter_server/: parameter_server.cpp
parameter_example/src/ros_parameter/: parameter_server_listener.cpp
parameter_example/srv/: Get.srv  GetParam.srv  HasParam.srv  OnChange.srv  OnChangeSubscription.srv  OnUpdate.srv  ParamEvent.srv  SearchParam.srv  Set.srv  SetParam.srv  SubscribeParam.srv  UnsubscribeParam.srv
parameter_example/test/: command_test.cpp  commands_queue_test.cpp  parameter_test.cpp  parameter_warehouse_test.cpp  parameters_container_test.cpp  parameters_server_test.cpp  subscribers_manager_test.cpp  tests.txt
src/: config_prototype_node.cpp
src/dynamic_config/: client_node.cpp  listener_node.cpp
src/gsoc/configuration/: configuration.cpp  configuration_listener.cpp
srv/: GetConf.srv
