<?xml version="1.0"?>
<package>
  <name>dynamic_config</name>
  <version>0.1.0</version>
  <description>The dynamic_config package</description>

  <maintainer email="abellagonzalo@gmail.com">Gonzalo Abella</maintainer>

  <license>BSD</license>

  <author email="abellagonzalo@gmail.com">Gonzalo Abella</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>
