<?xml version="1.0"?>
<package>
  <name>parameter_example</name>
  <version>0.1.0</version>
  <description>The parameter_example package</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/osrf/roscpp_param_api</url>
  <url type="bugtracker">https://github.com/osrf/roscpp_param_api/issues</url>

  <author email="william@osrfoundation.org">William Woodall</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>